plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.1'
    id 'io.spring.dependency-management' version '1.0.14.RELEASE'
    id 'io.freefair.lombok' version '6.5.1'
    id 'com.gorylenko.gradle-git-properties' version '2.4.1'
    id 'org.liquibase.gradle' version '2.1.0'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(11))
    }
}

repositories {
    mavenCentral()
}

test {
    useJUnitPlatform()
    systemProperty "file.encoding", "UTF-8"
}

springBoot {
    buildInfo()
}

compileJava.options.encoding = 'UTF-8'
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

configurations {
    liquibaseRuntime.extendsFrom runtimeClasspath
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-java8time'
    implementation 'org.liquibase:liquibase-core:4.16.1'
    implementation 'mysql:mysql-connector-java:8.0.30'
    implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.6'
    implementation 'com.h2database:h2:2.1.214'
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'com.google.api-client:google-api-client:1.35.1'
    implementation 'com.google.apis:google-api-services-drive:v3-rev20220508-1.32.1'
    implementation 'com.google.apis:google-api-services-sheets:v4-rev20220606-1.32.1'
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
    implementation 'net.lingala.zip4j:zip4j:2.11.2'
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'org.apache.commons:commons-csv:1.9.0'
    implementation 'org.apache.commons:commons-imaging:1.0-alpha2'
    implementation 'org.apache.pdfbox:pdfbox:2.0.27'
    implementation 'org.apache.pdfbox:jbig2-imageio:3.0.4'
    implementation 'net.imagej:ij:1.53e'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testImplementation 'org.seleniumhq.selenium:selenium-java:4.4.0'
    testImplementation 'io.github.bonigarcia:webdrivermanager:4.0.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
    liquibaseRuntime 'info.picocli:picocli:4.6.3'
    liquibaseRuntime 'org.liquibase.ext:liquibase-hibernate5:4.16.1'
    //liquibaseRuntime sourceSets.main.output

    liquibase {
        activities {
            main {
                changeLogFile 'src/main/resources/db/changelog/db.changelog-master.yaml'
                //changeLogFile 'db/changelog/db.changelog-master.yaml'
                //changeLogFile 'db.changelog-master.yaml'
                //classpath 'src/main/resources'
                url "jdbc:h2:file:./todb"
                referenceUrl "hibernate:spring:se.terrassorkestern.notgen.model?dialect=org.hibernate.dialect.H2Dialect&hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy"
                username "sa"
                password "sa"
            }
        }
    }
}

